se agrego jquery

--- a/templates/form.html
+++ b/templates/form.html
@@ -11,10 +11,8 @@
 
             <!-- Bootstrap CSS -->
     
-    <link href="css/bootstrap-flex.min.css" rel="stylesheet">
-    <link href="/estatico/fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/estatico/css/app.css" rel="stylesheet">
-
+    <link href="/static/css/bootstrap-flex.min.css" rel="stylesheet">
+    <link href="/static/fontawesome/css/font-awesome.min.css" rel="stylesheet">
   <head>
   <body>
 
@@ -185,8 +183,8 @@
  
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
       <%- include("js") -%>
-      <script src="static/js/jquery.min.js"</script>
-      <script src="static/js/tether.min.js"></script>
-      <script src="static/js/bootstrap.min.js"></script>
+      <script src="/static/js/jquery.min.js"</script>
+      <script src="/static/js/tether.min.js"></script>
+      <script src="/static/js/bootstrap.min.js"></script>
   </body>
 </html>
