--- a/templates/index.html
+++ b/templates/index.html
@@ -47,6 +47,19 @@
 		    <option value="M" label="Mujer">
 			</datalist>
 			<input name="color" list="lsexo" id="sexo"></input><br>
+			<label>Correo electronico</label>
+			<input type="text" id="correo"></input><br>
+			<label>Telefono</label>
+			<input type="text" id="telefono"></input><br>
+			<label>No. de control</label>
+			<input type="text" id="nControl"></input><br>
+			<label>Escuela</label>
+			<input type="text" id="escuela"></input><br>
+			<label>Semestre</label>
+			<input type="text" id=Semestre></input><br>
+			<label>Carrera</label>
+			<input type="text" id="carrera"></input><br>
+
 			<a id="Gencurp" href="#">Enviar solicitud</a>
 		</form>
 	</body>
