modificacion del puerto

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<script src="/static/js/jquery.min.js"></script>
-		<script src="/static/js/datos.js?1.0.23"></script>
+		<script src="/static/js/datos.js?1.0.25"></script>
 		<title>Solicitud Beca</title>
 	</head>
 	<body>
@@ -58,7 +58,7 @@
 			<input type="text" id=semestre></input><br>
 			<label>Carrera</label>
 			<input type="text" id="carrera"></input><br>
-			<a id="Gencurp" href="/camara">Enviar solicitud</a>
+			<a id="Gencurp" href="#">Enviar solicitud</a>
 		</form>
 	</body>
 </html>
