--- a/templates/index.html
+++ b/templates/index.html
@@ -58,7 +58,7 @@
 			<input type="text" id=semestre></input><br>
 			<label>Carrera</label>
 			<input type="text" id="carrera"></input><br>
-			<a id="Gencurp" href="#">Enviar solicitud</a>
+			<a id="Gencurp" href="/camara">Enviar solicitud</a>
 		</form>
 	</body>
 </html>
