--- a/templates/index.html
+++ b/templates/index.html
@@ -14,38 +14,36 @@
     <script src="/static/js/datos.js?1.0.25"></script>
     <link href="/static/css/bootstrap-flex.min.css" rel="stylesheet">
     <link href="/static/fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/static/css/app.css?1.1.7" rel="stylesheet">
+    <link href="/static/css/app.css?1.3.0" rel="stylesheet">
   <head>
-  <body>
+</head>
 
-
-
-  <!-- header -->
-   <div class="container">
+   <!-- header -->
+   
   <header id="header-container">
  
         <div class="row flex-items-xs-middle flex-items-xs-center flex-items-md-around ">
-          <div class="col-xs-9  col-sm-10 col-md-6 text-xs-left text-sm-center text-md-left columna">
+          <div class="col-xs-8  col-sm-10 col-md-6 text-xs-left text-sm-center text-md-left columna">
             <h1 class="hidden-xs-down">Becas SEP</h1>
             <h3 class="hidden-sm-up">Becas SEP</h3>
           </div>
-          <div class="col-xs-1 col-sm-2 col-md-6  text-xs-center  text-md-center columna">
+          <div class="col-xs-2 col-sm-2 col-md-6  text-xs-center  text-md-center columna">
             <span class="hidden-sm-down text-uppercase font-weight-bold">
                 <a  class="nav-link" href="www.sep.gob.mx"><img  height=80em src="/static/images/sep.png"></a>
               </span>
           </div>
-          <div class="col-xs-1 hidden-sm-up text-md-left">
+          <div class="botton-toggle col-xs-3 hidden-sm-up text-md-left">
              <button class="navbar-toggler   " data-toggle="collapse" data-target="#navMenu">&#9776;</button>
           </div>
         </div>
-  </div>
+
 </header>
 
   
    <!-- /header -->
 
    <!-- Menu -->
-   <div class="container">
+
    <div id="menu-container">
      <nav id="navMenu" class="navbar-toggleable-xs navbar navbar-dark collapse"  ">
       <div class="container">
@@ -62,7 +60,7 @@
                   <a href="/#faq" class="nav-link">Preguntas Frecuentes</a>
                 </li>
                 <li class="nav-item">
-                  <a href="/#quien" class="nav-link">Acerca de Becas</a>
+                  <a href="/#acercade" class="nav-link">Acerca de Becas</a>
                 </li>
 
               </ul>
@@ -70,193 +68,159 @@
           </div>
       </div>
      </nav>
-    </div>
+  
     </div>
 
    <!-- /Menu -->
+  <div id="inicio-container"> 
+     
+         <!-- carousel de imagenes -->
+          <div class="carousel-container">
+          <div class="container">
+            <div id="carousel-home" class="carousel slide" data-ride="carousel">
+              <ol class="carousel-indicators">
+                <li data-target="#carousel-home" data-slide-to="0" class="active"></li>
+                <li data-target="#carousel-home" data-slide-to="1"></li>
+                <li data-target="#carousel-home" data-slide-to="2"></li>
+              </ol>
+              <div class="carousel-inner" role="listbox">
+               <div class="carousel-item">
+                  <img src="static/images/slider1.jpg" alt="First slide">
+                  <div class="carousel-caption">
+                    <h3>Tramita tu Beca</h3>
+                    <p class="hidden-sm-down">No te quedes sin tu lugar, tramita tu beca
+                    <a href="/solicita">Ver más</a></p>
+                  </div>
+                </div>
+                <div class="carousel-item active">
+                  <img src="static/images/slider2.jpg" alt="Second slide">
+                  <div class="carousel-caption">
+                    <h3>Preguntas Frecuentes</h3>
+                    <p class="hidden-sm-down">Visita nuestra seccioón de preguntas frecuentes
+                    <a href="/#faq">Ver más</a></p> 
+                  </div>
+                </div>
 
-<!-- inicio -->
-<!--breadcrumb -->
-    <div id="breadcrumbs-container">
-      <div class="container">
-        <div class="row">
-          <div class="col-xs">
-            <nav class="breadcrumb">
-            <a class="breadcrumb-item" href="index">Pagina Principal</a>
-              <span class="breadcrumb-item active" > Solicita tu Beca</span>
-            </nav>
+               
+              </div>
+              <a class="left carousel-control" href="#carousel-home" role="button" data-slide="prev">
+                <span class="icon-prev" aria-hidden="true"></span>
+                <span class="sr-only">Previous</span>
+              </a>
+              <a class="right carousel-control" href="#carousel-home" role="button" data-slide="next">
+                <span class="icon-next" aria-hidden="true"></span>
+                <span class="sr-only">Next</span>
+              </a>
+            </div>
           </div>
-        </div>
-      </div>
     </div>
+  <!-- /carousel de imagenes -->
 
-<!--breadcrumb -->
-  
-<!-- inicio -->
+  <!-- inicio parte derecha -->
+          <div id="acercade">
+            <div class="jumbotron">
+              <div class="container">
+                  <h1 class="display-3">Acerca de becas</h1>
+                  <hr class="my-2">
+                  <p>El portal de becas, es un portal confiable que se desarrolló para ti, y que ofrece un panorama de las ofertas de becas que el Gobierno Federal pone a tu disposición de manera transparente, oportuna, homogénea y con calidad, tanto para cursar los niveles de educación básica, media superior, superior y posgrado, como para cultura, deporte y docencia.</p>
 
-<!-- formulario-container -->
+                  <p>Con la finalidad de ampliar las oportunidades de educación y contribuir en tu crecimiento profesional, en busca tu beca, nosotros te ayudamos, de manera rápida y ordenada, a localizar becas de acuerdo a tu perfil profesional, así como a conocer los requisitos y fechas de gestión.</p>
 
+                  <p>Este portal pensado y creado para ti te provee de noticias relevantes e información en torno a las convocatorias de tu interés. Asimismo es, un mecanismo de recepción de quejas, comentarios, dudas o sugerencias de cualquiera de los temas relacionados con las becas o servicios que se te proporcionan.</p>
 
-<div class="formulario-container">
-  <div class="container">
-    <div class="card formcurp" >
-<form>
-<div class="form-group row flex-items-xs-around ">
-    <label class="col-xs-12 col-md col-form-label text-md-right" for="nombre">Nombre:</label>
-    <div class="col-xs-12 col-md-2">
-      <input type="text" class="form-control" id="nombres" name="nombres"  placeholder="Escribe tu nombre" required>
-    </div>
-    <label class="col-xs-12 col-md col-form-label text-md-right" for="paterno">A. Paterno:</label>
-    <div class="col-xs-12 col-md-2">
-      <input type="text" class="form-control" id="paterno" name="paterno"  placeholder="Escribe tu A. Paterno" required>
-    </div>
-    <label class="col-xs-12 col-md col-form-label text-md-right" for="materno">A. Materno:</label>
-    <div class="col-xs-12 col-md-2 ">
-      <input type="text" class="form-control" id="materno" name="materno"  placeholder="Escribe tu A. Paterno" required>
-    </div>
-</div>
+                  <p>Y, para hacerte más amigable este sitio web, el sistema te brinda una sección de búsqueda con diferentes criterios, entre los que se pueden mencionar: nivel de estudios, institución y tipo de beca.
+                  Nos interesa que el portal de becas te ayude a localizar una beca que te impulse a continuar tus estudios y a elevar tu nivel educativo.</p>
 
-<div class="form-group row text-xs-left flex-items-xs-left ">
-    <label class="col-xs-12 col-md-2 col-form-label text-md-right" for="nombre">Fecha de Nacimiento:</label>
-    <div class="col-xs-12 col-md-3">
-      <input  name="color" type="date" class="form-control" id="fNacer" name="fNacer" required>
-    </div>
-    <label class="col-xs-12 col-md-1 col-form-label text-md-right" for="paterno"> Sexo:</label>
-     <datalist id="lsexo">
-        <option value="H" label="Hombre">
-        <option value="M" label="Mujer">
-    </datalist>
-    <div class="col-xs-12 col-md-2">
-      <input  list="lsexo" name="color" class="form-control " id="sexo" name="sexo" required>
-    </div>
-</div>
-<div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label text-md-right" for="materno">Email:</label>
-    <div class="col-xs-12 col-md-9 ">
-      <input type="correo" class="form-control" id="correo" name="correo" placeholder="Tu@correo.com">
-    </div>
-</div>
-<div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label text-md-right" for="telefono">Telefono:</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="tel" class="form-control" id="telefono" name="telefono"  placeholder="Escribe tu telefono con lada" required>
-    </div>
-</div>
-<div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label text-md-right" for="calle">Calle:</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="calle" name="calle" required  placeholder="Incluir número">
-    </div>
-</div>
-<div class="form-group row">    
-    <label class="col-xs-12 col-md-2 col-form-label text-md-right" for="colonia">Colonia:</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="colonia" name="colonia"  required placeholde
-      r="Tu Colonia">
-    </div>
-</div>
-<div class="form-group row">    
-    <label class="col-xs-12 col-md-2 col-form-label text-md-right" for="cp">Codigo Postal</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="cp" name="cp" required placeholder="7 digitos">
-    </div>
-</div>
-<div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label text-md-right" for="edo">Estado</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-       <datalist id="lentidad">
-        <option value="AGUASCALIENTES" >
-        <option value="BAJA CALIFORNIA" >
-        <option value="BAJA CALIFORNIA SUR">
-        <option value="CAMPECHE" >
-        <option value="COAHUILA DE ZARAGOZA" >
-        <option value="CHIAPAS" >
-        <option value="CHIHUAHUA" >
-        <option value="DISTRITO FEDERAL" >
-        <option value="DURANGO" >
-        <option value="JALISCO" >
-        <option value="ESTADO DE MEXICO" >
-        <option value="MICHOACAN DE OCAMPO" >
-        <option value="MORELOS" >
-        <option value="NAYARIT" >
-        <option value="OAXACA" >
-        <option value="TABASCO" >
-        <option value="VERACRUZ" >
-        <option value="ZACATECAS" >
-        <option value="EXTRANJERO" >
-      </datalist>
-      <input type="text" class="form-control" list="lentidad" id="entidad" required></input>
-    </div>
-</div>
-<div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="ciudad">Ciudad / Municipio</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="ciudad" name="ciudad" required>
-    </div>
-</div>
+                  <p class="lead">Misión</p>
+                  <hr class="my-2">
+                  <p>Impulsar y fortalecer el desarrollo académico de la población en los niveles de educación básica, media superior, superior y posgrado, así como para docentes o bien para cultura y deporte mediante un portal que ofrezca becas de manera transparente, oportuna, homogénea y con calidad.</p>
+                  <p class="lead">Visón</p>
+                  <hr class="my-2">
+                  <p>La Secretaría de Educación Pública, de manera conjunta con otras instituciones educativas, cuente con un portal de becas que brinde al usuario la posibilidad de conocer las distintas becas que se ofrecen, así como los requisitos, documentos y proceso para su otorgamiento; En el mismo portal podrá además, mediante un procedimiento ágil y transparente, llenar en línea su solicitud de beca y conocer el estado en que se encuentre la misma hasta que se determine si procedió o no su autorización.</p>
+                   <p class="lead">Objetivo</p>
+                  <hr class="my-2">
+                   <p>Difundir los programas de becas de manera transparente, oportuna, homogénea y con calidad para los niveles de educación básica, media superior, superior y posgrado, así como para docentes, cultura y deporte.</p>
 
 
-<datalist id="lescuela">
-        <option value="Instituto tecnnológico de Cuautla" >
-        <option value="Instituto tecnnológico de Zacatepec" >
-        <option value="Universidad Politecnica del Estado de Morelos">
-        <option value="Universidad Pedagógica Nacional " >
-</datalist>
-<div class="form-group row">
-  <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="escuela">Institución educativa</label>
-  <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="escuela"  list="lescuela" class="form-control" id="escuela" name="escuela">
+              </div>
+            </div>
+          </div>    
+           
+
+          <div id="faq">
+          <div class="container">
+          <h1 class="display-3"> Preguntas Frecuentes</h2>
+          <hr class="my-2">
+          <div class="row">
+            <div class="col-xs-12 col-md-6 col-lg-4">
+              <h4>¿Qué debo hacer si necesito información adicional sobre alguno de los programas que se presentan en el portal de becas?</h4>
+              <p class="lead">En el apartado de cada programa de becas, encontrarás el número telefónico y correo electrónico de integrantes del personal de la institución, con quienes podrás establecer contacto para aclarar tus dudas con respecto al programa de tu interés. </p>
+            </div>
+            <div class="col-xs-12 col-md-6 col-lg-4">
+              <h4>  ¿Existen apoyos de becas para extranjeros?</h4>
+              <p class="lead">Sí, el Consejo Nacional de Ciencia y Tecnología (CONACYT), la Secretaría de Educación Pública (SEP), a través de la Dirección General de Relaciones Internacionales (DGRI), la Universidad Autónoma Metropolitana (UAM), la Universidad Nacional Autónoma de México (UNAM) y la Universidad Pedagógica Nacional (UPN) ofrecen becas para realizar estudios y estancias en otros países.</p>
+          </div>
+          <div class="col-xs-12 col-md-6 col-lg-4">
+              <h4> ¿Existen apoyos de becas para extranjeros?</h4>
+              <p class="lead">Sí, puedes revisar la información a cargo de la Secretaría de Educación Pública (SEP), a través de la Dirección General de Relaciones Internacionales (DGRI) para conocer las opciones de becas a las que puedes aplicar si no eres mexicano/a.</p>
+          </div>
+          <div class="col-xs-12  col-md-6 col-lg-4">
+              <h4> ¿Cumplir con los requisitos, ¿me da derecho a obtener una beca??</h4> 
+              <p class="lead">Sí, puedes revisar la información a cargo de la Secretaría de Educación Pública (SEP), a través de la Dirección General de Relaciones Internacionales (DGRI) para conocer las opciones de becas a las que puedes aplicar si no eres mexicano/a.</p>
+          </div>
+           </div>
+           </div>
+  <!-- /inicio parte derecha -->
+      
+   
   </div>
-</div>
-<div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="ncontrol">N° de Control/ Matricula</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="ncontrol" name="ncontrol" required>
-    </div>
-</div>
-<div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="semestre">Semestre</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="semestre" name="semestre" required>
-    </div>
-</div>
-<div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="carrera">Carrera</label>
-    <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="carrera" name="carrera" required>
-    </div>
-</div>
-
-  <div class="form-group row">
-    <div class="col-xs-12 text-xs-center">
-      <a id="Gencurp" href="/camara" class="btn btn-primary">Enviar Solicitud</a>
-    </div>
-  </div>
-</form>
-</div>
-  </div>  
-
-</div>
-
-<!-- / formulario-container -->
-
-<!-- /inicio -->
+  <!-- /inicio -->
 
   <!-- footer -->
   <footer id="footer-container">
     <div class="container">
       <div class="row text-xs-center text-md-left">
         <div class="col-md-4">
-
+          <form id="suscribeForm" action="#" > <!-- method=¨POST"-->
+            <h4 class="text-uppercase">¿Quieres mantenerte informado?</h4>
+            <div class="form-group">
+              <input type="email" class="form-control" id="email" name="email" placeholder="tu@correo.com">
+              <small class="form-text text-muted">No compartiremos tu información con nadie más</small>
+            </div>
+            <button type="submit" class="btn btn-primary form-text"> Suscribirme</button>
+          </form>
         </div>
-        <div class="col-md-3 offset-md-5">
+        <div class="col-md-3 offset-md-5 navf">
+          <h4> Navegación</h4>
+          <ul class="nav">
+             <li class="nav-item">
+                  <a href="/" class="nav-link">Home</a>
+                </li>
+                <li class="nav-item ">
+                  <a href="/solicita" class="nav-link">Solicita tu beca</a>
+                </li>
+                <li class="nav-item">
+                  <a href="/#faq" class="nav-link">Preguntas Frecuentes</a>
+                </li>
+                <li class="nav-item">
+                  <a href="/#quien" class="nav-link">Acerca de Becas</a>
+                </li>
           </ul>
+
+
         </div>
       </div>
     </div>
   </footer>
+
   <!-- /footer -->
- 
+
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
+    <script src="/estatico/js/tether.min.js"></script>
+    <script src="/estatico/js/bootstrap.min.js"></script>
+
+    <!-- JS -->
   </body>
 </html>
+
+ 
