--- a/templates/index.html
+++ b/templates/index.html
@@ -152,19 +152,19 @@
           <h1 class="display-3"> Preguntas Frecuentes</h2>
           <hr class="my-2">
           <div class="row">
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 ">
               <h4>¿Qué debo hacer si necesito información adicional sobre alguno de los programas que se presentan en el portal de becas?</h4>
               <p class="lead">En el apartado de cada programa de becas, encontrarás el número telefónico y correo electrónico de integrantes del personal de la institución, con quienes podrás establecer contacto para aclarar tus dudas con respecto al programa de tu interés. </p>
             </div>
-            <div class="col-xs-12 col-md-6 col-lg-4">
+            <div class="col-xs-12 col-md-6 ">
               <h4>  ¿Existen apoyos de becas para extranjeros?</h4>
               <p class="lead">Sí, el Consejo Nacional de Ciencia y Tecnología (CONACYT), la Secretaría de Educación Pública (SEP), a través de la Dirección General de Relaciones Internacionales (DGRI), la Universidad Autónoma Metropolitana (UAM), la Universidad Nacional Autónoma de México (UNAM) y la Universidad Pedagógica Nacional (UPN) ofrecen becas para realizar estudios y estancias en otros países.</p>
           </div>
-          <div class="col-xs-12 col-md-6 col-lg-4">
+          <div class="col-xs-12 col-md-6 ">
               <h4> ¿Existen apoyos de becas para extranjeros?</h4>
               <p class="lead">Sí, puedes revisar la información a cargo de la Secretaría de Educación Pública (SEP), a través de la Dirección General de Relaciones Internacionales (DGRI) para conocer las opciones de becas a las que puedes aplicar si no eres mexicano/a.</p>
           </div>
-          <div class="col-xs-12  col-md-6 col-lg-4">
+          <div class="col-xs-12  col-md-6 ">
               <h4> ¿Cumplir con los requisitos, ¿me da derecho a obtener una beca??</h4> 
               <p class="lead">Sí, puedes revisar la información a cargo de la Secretaría de Educación Pública (SEP), a través de la Dirección General de Relaciones Internacionales (DGRI) para conocer las opciones de becas a las que puedes aplicar si no eres mexicano/a.</p>
           </div>
@@ -216,8 +216,8 @@
   <!-- /footer -->
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="/estatico/js/tether.min.js"></script>
-    <script src="/estatico/js/bootstrap.min.js"></script>
+    <script src="/static/js/tether.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
     <!-- JS -->
   </body>
