cambios en camara, correcion de bugs

--- a/templates/index.html
+++ b/templates/index.html
@@ -11,10 +11,10 @@
 
             <!-- Bootstrap CSS -->
     <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/datos.js?1.0.25"></script>
+    <script src="/static/js/datos.js?1.0.26"></script>
     <link href="/static/css/bootstrap-flex.min.css" rel="stylesheet">
     <link href="/static/fontawesome/css/font-awesome.min.css" rel="stylesheet">
-    <link href="/static/css/app.css?1.3.0" rel="stylesheet">
+    <link href="/static/css/app.css?1.3.2" rel="stylesheet">
   <head>
 </head>
 
@@ -32,7 +32,7 @@
                 <a  class="nav-link" href="www.sep.gob.mx"><img  height=80em src="/static/images/sep.png"></a>
               </span>
           </div>
-          <div class="botton-toggle col-xs-3 hidden-sm-up text-md-left">
+          <div class="botton-toggle col-xs-2 hidden-sm-up text-md-left">
              <button class="navbar-toggler   " data-toggle="collapse" data-target="#navMenu">&#9776;</button>
           </div>
         </div>
@@ -165,7 +165,7 @@
               <p class="lead">Sí, puedes revisar la información a cargo de la Secretaría de Educación Pública (SEP), a través de la Dirección General de Relaciones Internacionales (DGRI) para conocer las opciones de becas a las que puedes aplicar si no eres mexicano/a.</p>
           </div>
           <div class="col-xs-12  col-md-6 ">
-              <h4> ¿Cumplir con los requisitos, ¿me da derecho a obtener una beca??</h4> 
+              <h4> ¿Cumplir con los requisitos, ¿me da derecho a obtener una beca?</h4> 
               <p class="lead">Sí, puedes revisar la información a cargo de la Secretaría de Educación Pública (SEP), a través de la Dirección General de Relaciones Internacionales (DGRI) para conocer las opciones de becas a las que puedes aplicar si no eres mexicano/a.</p>
           </div>
            </div>
@@ -206,8 +206,6 @@
                   <a href="/#quien" class="nav-link">Acerca de Becas</a>
                 </li>
           </ul>
-
-
         </div>
       </div>
     </div>
