--- a/templates/index3.html
+++ b/templates/index3.html
@@ -11,7 +11,7 @@
 
             <!-- Bootstrap CSS -->
     <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/datos.js?1.0.25"></script>
+    <script src="/static/js/datos.js?1.0.26"></script>
     <link href="/static/css/bootstrap-flex.min.css" rel="stylesheet">
     <link href="/static/fontawesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/static/css/app.css?1.1.91" rel="stylesheet">
@@ -34,7 +34,7 @@
                 <a  class="nav-link" href="www.sep.gob.mx"><img  height=80em src="/static/images/sep.png"></a>
               </span>
           </div>
-          <div class="botton-toggle col-xs-3 hidden-sm-up text-md-left">
+          <div class="botton-toggle col-xs-2 hidden-sm-up text-md-left">
              <button class="navbar-toggler   " data-toggle="collapse" data-target="#navMenu">&#9776;</button>
           </div>
         </div>
@@ -209,9 +209,9 @@
   </div>
 </div>
 <div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="ncontrol">N° de Control/ Matricula</label>
+    <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="nControl">N° de Control/ Matricula</label>
     <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="ncontrol" name="ncontrol" required>
+      <input type="text" class="form-control" id="nControl" name="ncontrol" required>
     </div>
 </div>
 <div class="form-group row">
@@ -281,7 +281,7 @@
   <!-- /footer -->
  
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="/estatico/js/tether.min.js"></script>
-    <script src="/estatico/js/bootstrap.min.js"></script>
+    <script src="/static/js/tether.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
   </body>
 </html>
