--- a/static/css/app.css
+++ b/static/css/app.css
@@ -69,9 +69,6 @@ body
 }
 
 
-
-
-
 .btn-primary
 {
 	background-color: #303947;
@@ -96,4 +93,10 @@ a
 }
 a:hover{
 	color:#A0BBCD;
+}
+
+.div-foto
+{
+	margin-top: 2em;
+	margin-bottom: 2em;
 }
