--- a/templates/index3.html
+++ b/templates/index3.html
@@ -11,7 +11,7 @@
 
             <!-- Bootstrap CSS -->
     <script src="/static/js/jquery.min.js"></script>
-    <script src="/static/js/datos.js?1.0.25"></script>
+    <script src="/static/js/datos.js?2.0.30"></script>
     <link href="/static/css/bootstrap-flex.min.css" rel="stylesheet">
     <link href="/static/fontawesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/static/css/app.css?1.1.91" rel="stylesheet">
@@ -209,16 +209,15 @@
   </div>
 </div>
 <div class="form-group row">
-    <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="ncontrol">N° de Control/ Matricula</label>
+    <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="nControl">N° de Control/ Matricula</label>
     <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="ncontrol" name="ncontrol" required>
+      <input type="text" class="form-control" id="nControl" name="nControl" required>
     </div>
 </div>
 <div class="form-group row">
     <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="semestre">Semestre</label>
     <div class="col-xs-12 col-md-9 text-md-center">
-      <input type="text" class="form-control" id="semestre" name="semestre" required>
-    </div>
+      <input type="text" class="form-control" id="semestre" name="semestre" required>   </div>
 </div>
 <div class="form-group row">
     <label class="col-xs-12 col-md-2 col-form-label  text-md-right" for="carrera">Carrera</label>
