--- a/templates/pdf.html
+++ b/templates/pdf.html
@@ -2,15 +2,18 @@
     <head>
     <meta charset="utf-8">
     <title></title>
+    <link href="/static/css/bootstrap-flex.min.css" rel="stylesheet">
+    <link href="/static/fontawesome/css/font-awesome.min.css" rel="stylesheet">
+    <link href="/static/css/app.css?1.3.6" rel="stylesheet">
     </head>
     <body>
     <div>
-	  <div >
-	    
+	  <div class="row card">
+	    <div class="col-xs-6">
 	    <h3 >
-	    <img src="" width="50" height="50" >
+	    <!--<img src="static/images/sep.png" height="200px" > -->
 	    	<strong >
-	    		PYDF Creator
+	    		Comprobante de registro
 	    	</strong>
 
 	    </h3>
@@ -22,7 +25,7 @@
 		      <img src={{src}}>
 		    </a>
 		  </div>
-		  <div >
+		  <div class="row">
 		    <a href="#" >
 		       <h3>Datos Personales</h3>
 		      	<strong>
