--- a/templates/index.html
+++ b/templates/index.html
@@ -216,8 +216,8 @@
   <!-- /footer -->
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="/estatico/js/tether.min.js"></script>
-    <script src="/estatico/js/bootstrap.min.js"></script>
+    <script src="/static/js/tether.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
 
     <!-- JS -->
   </body>
