--- a/templates/index3.html
+++ b/templates/index3.html
@@ -280,7 +280,7 @@
   <!-- /footer -->
  
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
-    <script src="/estatico/js/tether.min.js"></script>
-    <script src="/estatico/js/bootstrap.min.js"></script>
+    <script src="/static/js/tether.min.js"></script>
+    <script src="/static/js/bootstrap.min.js"></script>
   </body>
 </html>
